knowledge_base/knowledge/v12/capl/structured/CANopen/coTfsSyncProducerDetail.md
# coTfsSyncProducerDetail

> Category: `CANopen` | Type: `function`

## Syntax

```c
long coTfsSyncProducerDetail( dword duration, dword producerTime, dword tolerance, dword maxCounter );
```

## Description

Configures the objects 0x1005, 0x1006 and 0x1019 in the object dictionary of the DUT Device Under Test. After this, the sync messages generated by the sync producer (DUT) are checked for their regularity. The permissible total deviation is specified in tolerance.

After the test, the values of objects 0x1005 and 0x1006 in the object dictionary of the DUT are set back to 0. The test checks whether the sync producer really sends out no more sync messages.

## Return Values

Error code

## Example

```c
if ( coTfsSyncProducerDetail( 3000, 100, 20, 200) != 1) {
  write("coTfsSyncProducerDetail failed");
}
```
