knowledge_base/knowledge/v15/capl/structured/CANopen/coTfsSyncProducerDetail.md
# coTfsSyncProducerDetail

> Category: `CANopen` | Type: `function`

## Syntax

```c
long coTfsSyncProducerDetail( dword duration, dword producerTime, dword tolerance, dword maxCounter );
```

## Description

Configures the objects 0x1005, 0x1006 and 0x1019 in the object dictionary of the DUT Device Under Test. After this, the sync messages generated by the sync producer (DUT) are checked for their regularity. The permissible total deviation is specified in tolerance.

After the test, the values of objects 0x1005 and 0x1006 in the object dictionary of the DUT are set back to 0. The test checks whether the sync producer really sends out no more sync messages.

## Parameters

| Name | Description |
|---|---|
| duration | Test duration in ms. |
| producerTime | Sync time of the sync producer (DUT) in ms. |
| tolerance | Permitted time deviation of the target device in ms. It is recommended that you use an even value. The tolerated time frame within which a message is still accepted is: x - (tolerance/2) ≤ x ≤ x + (tolerance/2) |
| maxCounter | 1 < counter < 241; value, which will be written to object 0x1019 |

## Return Values

Error code

## Example

```c
if ( coTfsSyncProducerDetail( 3000, 100, 20, 200) != 1) {
  write("coTfsSyncProducerDetail failed");
}
```

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | — | 8.2 | 13.0 | — | — | 2.1 SP3 |
| Restricted To | — | CANopen | CANopen | — | — | CANopen |
| CANalyzer Measurement Setup (Transmit Branch) | — | N/A | N/A | N/A | N/A | N/A |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | N/A |
| CANoe Simulation Setup | N/A | ✔ | ✔ | — | N/A | N/A |
| CANoe System and Communication Setup | N/A | — | — | — | — | N/A |
| CANoe Test Setup for Test Modules | N/A | ✔ | ✔ | — | N/A | N/A |
| CANoe Test Setup for Test Units | N/A | ✔ | ✔ | — | — | N/A |
| 32-Bit | — | ✔ | ✔ | N/A | — | N/A |
| 64-Bit | — | ✔ | ✔ | — | — | N/A |
